resources/notes/exam_reports/exam report 01/4-0-ft_split.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r4p25.42.us.org
Darwin 17.2.0 x86_64
$> date
Tue May  7 12:59:53 PDT 2019
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.1.0 (clang-902.0.39.1)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20190507/lusanche

= Git history ==================================================================
$> git -C /var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user log --pretty='%H - %an, %ad : %s'
41bfaba6624deff4cb186dd69646ff814d44001c - Exam 42, Tue May 7 12:59:34 2019 -0700 : g
356a9525e4c18786d151c42a9a1511dd4704de82 - Exam 42, Tue May 7 12:42:30 2019 -0700 : creation of epur_str
d6c1149d92d7a1d6c43b975cb874134b2461e2fe - Exam 42, Tue May 7 11:26:40 2019 -0700 : creation of lcm
12d90c8cb5726a92ea1ee40412cd2177bbfe1771 - Exam 42, Tue May 7 10:20:05 2019 -0700 : creation of ft_atoi
c2c35eb24cf8c7f74a5872fd9f2b320ad8f5e126 - Exam 42, Tue May 7 09:45:41 2019 -0700 : creation of ft_swap
1b42f2b04df4a4ea66225e8c707d9be263f4b304 - Exam 42, Tue May 7 09:20:31 2019 -0700 : creation of only_z
 
= Collected files ==========================================
$> ls -lAR /var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user
total 8
-rw-r--r--  1 deepthought  deepthought  1417 May  7 12:59 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 epur_str
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 ft_atoi
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 ft_split
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 ft_swap
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 lcm
drwxr-xr-x  3 deepthought  deepthought   102 May  7 12:59 only_z

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/epur_str:
total 8
-rw-r--r--  1 deepthought  deepthought  1377 May  7 12:59 epur_str.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/ft_atoi:
total 8
-rw-r--r--  1 deepthought  deepthought  1327 May  7 12:59 ft_atoi.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/ft_split:
total 8
-rw-r--r--  1 deepthought  deepthought  1353 May  7 12:59 ft_split.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/ft_swap:
total 8
-rw-r--r--  1 deepthought  deepthought  971 May  7 12:59 ft_swap.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/lcm:
total 8
-rw-r--r--  1 deepthought  deepthought  1141 May  7 12:59 lcm.c

/var/folders/w9/gdzbp3k51w9f797vx_qbfvlr0000gp/T/tmpp8Xb5e/user/only_z:
total 8
-rw-r--r--  1 deepthought  deepthought  965 May  7 12:59 only_z.c
 
= ft_split =====================================================================
$> gcc -Wextra -Wall -Werror ft_split.c main.c -o user_exe 
ft_split.c:25:29: error: use of undeclared identifier 'av'
                        while (str[i] != '\t' && av[1][i] != ' ' && str[i] != '\n' && str[i])
                                                 ^
ft_split.c:27:17: error: equality comparison result unused [-Werror,-Wunused-comparison]
                                array[x][y] == str[i];
                                ~~~~~~~~~~~~^~~~~~~~~
ft_split.c:27:17: note: use '=' to turn this equality comparison into an assignment
                                array[x][y] == str[i];
                                            ^~
                                            =
ft_split.c:32:4: error: use of undeclared identifier 'j'
                        j++;
                        ^
ft_split.c:33:8: error: use of undeclared identifier 'av'
                        if (av[1][i] == '\0')
                            ^
4 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
